--- a/georgetown/index.html
+++ b/georgetown/index.html
@@ -44,7 +44,7 @@
 
         <h5>Contact Details:</h5>
 
-        <p>The best way to reach me is by email at dwillis AT gmail.com. My AIM is derekpwillis. I have "open office hours": if you see me online and available, feel free to ask. If my status is anything but available, try email instead.</p>
+        <p>The best way to reach me is by email at steven DOT rich AT georgetown.edu. You can find me on g-chat at the same address. I have "open office hours": if you see me online and available, feel free to ask. If my status is anything but available, try email instead.</p>
 
         <h5>Course Objective:</h5>
 
@@ -78,7 +78,7 @@ track	for	a	poor	final	grade.</p>
 
         <h5>Written critiques:</h5>
 
-        <p>Each student will complete two written critiques of professional work that makes extensive use of government data. While you may not be able to replicate the reporters’ work, try to put yourself in their shoes and judge the decisions they made. Think of these as mini-book reviews, although I expect between 500-750 words for each. Combined, these critiques make up 10 percent of each student’s grade.</p>
+        <p>Each student will complete two written critiques of professional work that makes extensive use of government data. While you may not be able to replicate the reporters’ work, try to put yourself in their shoes and judge the decisions they made. Think of these as mini-book reviews, although I expect between 500-750 words for each. Combined, these critiques make up 15 percent of each student’s grade.</p>
 
         <h5>Mid-term:</h5>
 
@@ -94,10 +94,10 @@ track	for	a	poor	final	grade.</p>
 
         <h5>Attendance and participation:</h5>
 
-        <p>Journalism is not a passive activity and requires focus, inquisition and involvement. We will be discussing professional work, writings and data issues every week, and I expect your comments, questions and other contributions to our class. None of this can happen if you don’t show up. If you must miss a class, please try to let the instructor know in advance. You will be responsible for any work you miss.</p>
+        <p>Journalism is not a passive activity and requires focus, inquisition and involvement. We will be discussing professional work, writings and data issues every week, and I expect your comments, questions and other contributions to our class. None of this can happen if you don’t show up. If you must miss a class, please try to let the instructor know in advance. You will be responsible for any work you miss. Participation in the course constitutes 10 percent or each student’s grade.</p>
               </section>
       <footer>
-        <br><br><p><<small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <br><br><p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
