--- a/georgetown/index.html
+++ b/georgetown/index.html
@@ -34,6 +34,8 @@
 
         <h3>Georgetown University: MPS-Journalism</h3>
 
+        <h3>Spring 2016</h3>
+
         <h4>Class Time:</h4>
 
         <p>Weds. 8:00-10:30 p.m.</p>
