updating class schedule due to funky first week Georgetown scheduling

--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -34,19 +34,21 @@
 
         <h3>Georgetown University: MPS-Journalism</h3>
 
+        <h3>Spring 2016</h3>
+
         <h5>Course Outline</h5>
 
 		<p>Note: this outline is subject to change; if it does, students will be notified.</p>
 
 		<ul>
-			<li><a href="jan13.html">Jan. 13</a> – Course Introduction; Intro to Data; Excel Skills</li>
-			<li><a href="jan20.html">Jan. 20</a> – Unstructured data; Text Visualization; Basic visualizations</li>
-			<li><a href="jan27.html">Jan. 27</a> – Excel formulas, Basic charting, Election results data</li>
-			<li><a href="feb3.html">Feb. 3</a> – More Excel formulas; Summarizing with Excel</li>
-			<li><a href="feb10.html">Feb. 10</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
-			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
-			<li><a href="feb24.html">Feb. 24</a> – SQL Joins; Congressional voting data</li>
-			<li><a href="mar2.html">March 2</a> – SQL Wrap-up; Cleaning dirty data</li>
+			<li><a href="jan20.html">Jan. 20</a> – Course Introduction; Intro to Data; Excel Skills</li>
+			<li><a href="jan27.html">Jan. 27</a> – Unstructured data; Text Visualization; Basic visualizations</li>
+			<li><a href="feb3.html">Feb. 3</a> – Excel formulas, Basic charting, Election results data</li>
+			<li><a href="feb10.html">Feb. 10</a> – More Excel formulas; Summarizing with Excel</li>
+			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
+			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
+			<li><a href="mar2.html">March 2</a> – SQL Joins; Congressional voting data</li>
+			<li><a href="mar9.html">March 9</a> – SQL Wrap-up; Cleaning dirty data</li>
       <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15!</li>
       <li>March 8 – Homework from Feb. 28 due</li>
  			<li><a href="mar9.html">March 16 – Mapping; Fusion Tables</a></li>
@@ -61,7 +63,7 @@
 		</ul>
   </section>
       <footer>
-        <br><br><p><<small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <br><br><p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
