--- a/georgetown/jan20.html
+++ b/georgetown/jan20.html
@@ -59,13 +59,13 @@
 		<h5>Assignments for Jan. 27</h5>
 		Read: <a href="http://www.poynter.org/content/content_view.asp?id=83144">A Guide to Computer Assisted Reporting</a><br/>
 		Read: <a href="http://www.holovaty.com/writing/fundamental-change/">A fundamental way newspaper sites need to change</a></br>
-		Read: <a href="http://fivethirtyeight.com/datalab/nigeria-kidnapping/">Kidnapping of Girls in Nigeria Is Part of a Worsening Problem</a> and <a href="http://fivethirtyeight.com/datalab/mapping-kidnappings-in-nigeria/">Mapping Kidnappings in Nigeria</a>
+		Read: <a href="http://fivethirtyeight.com/datalab/nigeria-kidnapping/">Kidnapping of Girls in Nigeria Is Part of a Worsening Problem</a> and <a href="http://fivethirtyeight.com/datalab/mapping-kidnappings-in-nigeria/">Mapping Kidnappings in Nigeria</a></br>
 
-		<p><b>Data Modeling in Excel</b>
+		<h5>Data Modeling in Excel</h5>
 
 		<p>Using this <a href="http://www.fec.gov/disclosurehs/hsnational.do">2016 House and Senate campaign finance data</a>, can you find three candidates and build a spreadsheet so that it is more useful, so that you can ask specific questions of it?</p>
 
-		<p><b>Data Modeling in Excel, Part 2</b>
+		<h5>Data Modeling in Excel, Part 2</h5>
 
 		<p>Pick three sex offenders from <a href="http://sexoffender.dc.gov/">the District's registry</a>. How would you model their information in Excel? You'll want to narrow it down to common types of information about them and you probably won't want to model everything.</p>
 
