lean formatting of first week class page

--- a/georgetown/jan20.html
+++ b/georgetown/jan20.html
@@ -59,7 +59,7 @@
 		<h5>Assignments for Jan. 27</h5>
 		Read: <a href="http://www.poynter.org/content/content_view.asp?id=83144">A Guide to Computer Assisted Reporting</a><br/>
 		Read: <a href="http://www.holovaty.com/writing/fundamental-change/">A fundamental way newspaper sites need to change</a></br>
-		Read: <a href="http://fivethirtyeight.com/datalab/nigeria-kidnapping/">Kidnapping of Girls in Nigeria Is Part of a Worsening Problem</a> and <a href="http://fivethirtyeight.com/datalab/mapping-kidnappings-in-nigeria/">Mapping Kidnappings in Nigeria</a></br>
+		Read: <a href="http://fivethirtyeight.com/datalab/nigeria-kidnapping/">Kidnapping of Girls in Nigeria Is Part of a Worsening Problem</a> and <a href="http://fivethirtyeight.com/datalab/mapping-kidnappings-in-nigeria/">Mapping Kidnappings in Nigeria</a></br></br>
 
 		<h5>Data Modeling in Excel</h5>
 
