changing schedule to match pushed back start date

--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -48,16 +48,15 @@
 			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
 			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
 			<li><a href="mar2.html">March 2</a> – SQL Joins; Congressional voting data</li>
-			<li><a href="mar9.html">March 9</a> – SQL Wrap-up; Cleaning dirty data</li>
       <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15!</li>
       <li>March 8 – Homework from Feb. 28 due</li>
- 			<li><a href="mar9.html">March 16 – Mapping; Fusion Tables</a></li>
+      <li><a href="mar16.html">March 16</a> – SQL Wrap-up; Cleaning dirty data</li>
       <li>March 23 – Easter Break – NO CLASS</li>
-      <li><a href="mar19.html">March 30 – Working with PDFs; Military data</a></li>
-			<li><a href="mar26.html">April 6 – Census Data; Writing with Data</a></li>
-			<li><a href="apr9.html">April 13 – Basic Web Visualization Tools; Structured Web Data; IRS Data; 2nd Critique due</a></li>
-      <li>April 20 - How the Internet Works; Version Control (GUEST SPEAKER)</li>
-			<li><a href="apr23.html">April 27 – Odds and Ends</a></li>
+      <li><a href="mar30.html">March 30 – Mapping; Fusion Tables</a></li>
+      <li><a href="apr6.html">April 6 – Working with PDFs; Military data</a></li>
+			<li><a href="apr13.html">April 13 – Census Data; Writing with Data</a></li>
+			<li><a href="apr20.html">April 20 – Basic Web Visualization Tools; Structured Web Data; IRS Data; 2nd Critique due</a></li>
+			<li><a href="apr27.html">April 27 – Odds and Ends</a></li>
 			<li>May 4 - Study Days – NO CLASS</li>
 			<li>May 11 - Story Memo Presentations; Wrap-up</li>
 		</ul>
