--- a/georgetown/jan27.html
+++ b/georgetown/jan27.html
@@ -13,6 +13,9 @@
     <![endif]-->
   </head>
   <body>
+
+    STRAIGHT FOR DEREK'S. NEEDS UPDATING.
+
     <div class="wrapper">
       <header>
         <img src="Data_with_pipe.jpg" style="box-shadow: 0px 0px 10px #888; border-radius: 20px 20px 20px 20px" >
