added link to Georgetown site

--- a/georgetown/index.html
+++ b/georgetown/index.html
@@ -30,7 +30,7 @@
         </ul>
       </header>
       <section>
-        <h2>MPJO-722-01: Data Reporting</h2>
+        <h2><a href="http://scs.georgetown.edu/courses/207/data-reporting">MPJO-722-01: Data Reporting</a></h2>
 
         <h3>Georgetown University: MPS-Journalism</h3>
 
