updating February 3 class schedule

--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -43,7 +43,7 @@
 		<ul>
 			<li><a href="jan20.html">Jan. 20</a> – Course Introduction; Intro to Data; Excel Skills</li>
 			<li><a href="jan27.html">Jan. 27</a> – Unstructured data; Text Visualization; Basic visualizations</li>
-			<li><a href="feb3.html">Feb. 3</a> – Excel formulas, Basic charting, Election results data</li>
+			<li><a href="feb3.html">Feb. 3</a> – How not to use data; Playing with unfamiliar data; Basic Excel formulas</li>
 			<li><a href="feb10.html">Feb. 10</a> – More Excel formulas; Summarizing with Excel</li>
 			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
 			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
