updating dates to make schedule actually make sense

--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -48,8 +48,8 @@
 			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
 			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
 			<li><a href="mar2.html">March 2</a> – SQL Joins; Congressional voting data</li>
-      <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15!</li>
       <li>March 8 – Homework from Feb. 28 due</li>
+      <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15! (Ask me about the NICAR Conference)</li>
       <li><a href="mar16.html">March 16</a> – SQL Wrap-up; Cleaning dirty data</li>
       <li>March 23 – Easter Break – NO CLASS</li>
       <li><a href="mar30.html">March 30 – Mapping; Fusion Tables</a></li>
