changing up schedule

--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -51,7 +51,7 @@
       <li>March 8 – Homework from Feb. 28 due</li>
       <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15! (Ask me about the <a href="https://ire.org/conferences/nicar2016/">NICAR Conference</a>)</li>
       <li><a href="mar16.html">March 16</a> – SQL Wrap-up; Cleaning dirty data</li>
-      <li>March 23 – Easter Break – NO CLASS</li>
+      <li>March 23 – There's class</li>
       <li><a href="mar30.html">March 30 – Mapping; Fusion Tables</a></li>
       <li><a href="apr6.html">April 6 – Working with PDFs; Military data</a></li>
 			<li><a href="apr13.html">April 13 – Census Data; Writing with Data</a></li>
