--- a/georgetown/outline.html
+++ b/georgetown/outline.html
@@ -45,9 +45,9 @@
 			<li><a href="jan27.html">Jan. 27</a> – Unstructured data; Text Visualization; Basic visualizations</li>
 			<li><a href="feb3.html">Feb. 3</a> – How not to use data; Playing with unfamiliar data; Basic Excel formulas</li>
 			<li><a href="feb10.html">Feb. 10</a> – More Excel formulas; Summarizing with Excel</li>
-			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Campaign Finance data; Critique due</li>
-			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Campaign Finance data</li>
-			<li><a href="mar2.html">March 2</a> – SQL Joins; Congressional voting data</li>
+			<li><a href="feb17.html">Feb. 17</a> – Database Skills – Importing and querying; Census data; Critique due</li>
+			<li><a href="feb24.html">Feb. 24</a> – Database Skills – Summarizing Data; More Census Finance data</li>
+			<li><a href="mar2.html">March 2</a> – SQL Joins; College Athletics data</li>
       <li>March 8 – Homework from Feb. 28 due</li>
       <li>March 9 – Spring Break – NO CLASS, but Midterm due by March 15! (Ask me about the <a href="https://ire.org/conferences/nicar2016/">NICAR Conference</a>)</li>
       <li><a href="mar16.html">March 16</a> – SQL Wrap-up; Cleaning dirty data</li>
@@ -55,7 +55,7 @@
       <li><a href="mar30.html">March 30 – Mapping; Fusion Tables</a></li>
       <li><a href="apr6.html">April 6 – Working with PDFs; Military data</a></li>
 			<li><a href="apr13.html">April 13 – Census Data; Writing with Data</a></li>
-			<li><a href="apr20.html">April 20 – Basic Web Visualization Tools; Structured Web Data; IRS Data; 2nd Critique due</a></li>
+			<li><a href="apr20.html">April 20 – Basic Web Visualization Tools; Structured Web Data; Police Shootings Data; 2nd Critique due</a></li>
 			<li><a href="apr27.html">April 27 – Odds and Ends</a></li>
 			<li>May 4 - Study Days – NO CLASS</li>
 			<li>May 11 - Story Memo Presentations; Wrap-up</li>
