--- a/georgetown/jan27.html
+++ b/georgetown/jan27.html
@@ -39,7 +39,7 @@
 
         <h4>Text as Data</h4>
 
-		<h4>Links</h4>
+		<h4>For discussion (Read before class)</h4>
 
 		<ul>
 		  <li><a href="http://www.nytimes.com/ref/washington/20070123_STATEOFUNION.html">The Words That Were Used</a></li>
