--- a/clips.html
+++ b/clips.html
@@ -111,7 +111,7 @@ layout: default
   Data Journalism Award (<a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Heywood Broun Award (<a href="">Substantial Distinction</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Online News Association Award (<a href="http://journalists.org/awards/2014-awards/">Student Projects, Large</a>), 2014, for News21: Coming Home<br>
-  Selden Ring Award for Investigative Reporting, Finalist, (<a href="http://annenberg.usc.edu/news/around-usc-annenberg/milwaukee-journal-sentinel-team-wins-2014-usc-annenberg-selden-ring-award">2014</a>) and (<a href="http://annenberg.usc.edu/news/awards/%E2%80%9Cseafood-slaves%E2%80%9D-associated-press-wins-usc-annenberg%E2%80%99s-2016-selden-ring-award">2016</a>) , Finalist
+  Selden Ring Award for Investigative Reporting (Finalist), <a href="http://annenberg.usc.edu/news/around-usc-annenberg/milwaukee-journal-sentinel-team-wins-2014-usc-annenberg-selden-ring-award">2014</a> and <a href="http://annenberg.usc.edu/news/awards/%E2%80%9Cseafood-slaves%E2%80%9D-associated-press-wins-usc-annenberg%E2%80%99s-2016-selden-ring-award">2016</a>, for Police Shootings<br>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
