--- a/clips.html
+++ b/clips.html
@@ -107,7 +107,7 @@ layout: default
   Pulitzer Prize (<a href="http://www.pulitzer.org/works/2014-Public-Service-Group1">Public Service</a>), 2014, for NSA Revelations<br>
   Gerald Loeb Award (<a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a>), 2014, for NSA Revelations<br>
   Robert F. Kennedy Journalism Award (<a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
-  Edward R. Murrow Award (Investigative Reporting, Large Online Organizations), 2015, for Stop and Seize: Cops and the Cash they Confiscate
+  Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate
   American Society of News Editors Award (<a href="http://asne.org/blog_home.asp?Display=1666">Local Accountability Reporting</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Data Journalism Award (<a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Heywood Broun Award (<a href="">Substantial Distinction</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
