--- a/clips.html
+++ b/clips.html
@@ -107,14 +107,14 @@ layout: default
   Pulitzer Prize (<a href="http://www.pulitzer.org/works/2014-Public-Service-Group1">Public Service</a>), 2014, for NSA Revelations<br>
   Gerald Loeb Award (<a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a>), 2014, for NSA Revelations<br>
   Robert F. Kennedy Journalism Award (<a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
-  Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate
+  Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate<br>
   American Society of News Editors Award (<a href="http://asne.org/blog_home.asp?Display=1666">Local Accountability Reporting</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Data Journalism Award (<a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Heywood Broun Award (<a href="">Substantial Distinction</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Online News Association Award (<a href="http://journalists.org/awards/2014-awards/">Student Projects, Large</a>), 2014, for News21: Coming Home<br>
   Selden Ring Award for Investigative Reporting (Finalist), <a href="http://annenberg.usc.edu/news/around-usc-annenberg/milwaukee-journal-sentinel-team-wins-2014-usc-annenberg-selden-ring-award">2014</a> and <a href="http://annenberg.usc.edu/news/awards/%E2%80%9Cseafood-slaves%E2%80%9D-associated-press-wins-usc-annenberg%E2%80%99s-2016-selden-ring-award">2016</a>, for NSA Revelations and Police Shootings<br>
-  Goldsmith Prize for Investigative Reporting (<a href="http://shorensteincenter.org/goldsmith-awards-finalists-2016/">Finalist</a>), 2016, Police Shootings
-  Scripps Howard Award (<a href="http://www.prnewswire.com/news-releases/scripps-howard-awards-honor-nations-best-2014-journalism-300051814.html">Finalist, Public Service Reporting</a>), 2015, for Stop and Seize
+  Goldsmith Prize for Investigative Reporting (<a href="http://shorensteincenter.org/goldsmith-awards-finalists-2016/">Finalist</a>), 2016, Police Shootings<br>
+  Scripps Howard Award (<a href="http://www.prnewswire.com/news-releases/scripps-howard-awards-honor-nations-best-2014-journalism-300051814.html">Finalist, Public Service Reporting</a>), 2015, for Stop and Seize<br>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
