--- a/clips.html
+++ b/clips.html
@@ -116,7 +116,7 @@ layout: default
   Selden Ring Award for Investigative Reporting (Finalist), <a href="http://annenberg.usc.edu/news/around-usc-annenberg/milwaukee-journal-sentinel-team-wins-2014-usc-annenberg-selden-ring-award">2014</a> and <a href="http://annenberg.usc.edu/news/awards/%E2%80%9Cseafood-slaves%E2%80%9D-associated-press-wins-usc-annenberg%E2%80%99s-2016-selden-ring-award">2016</a>, for NSA Revelations and Police Shootings<br>
   Goldsmith Prize for Investigative Reporting (<a href="http://shorensteincenter.org/goldsmith-awards-finalists-2016/">Finalist</a>), 2016, for Police Shootings<br>
   Scripps Howard Award (<a href="http://www.prnewswire.com/news-releases/scripps-howard-awards-honor-nations-best-2014-journalism-300051814.html">Finalist, Public Service Reporting</a>), 2015, for Stop and Seize<br>
-  Scripps Howard Award (Finalist, Investigative Reporting), 2015, for Pilce Shootings<br>
+  Scripps Howard Award (<a href="http://www.scripps.com/foundation/news/958-2015-scripps-howard-award-winners-announced">Finalist, Investigative Reporting</a>), 2015, for Police Shootings<br>
   Associated Press Sports Editors Award (<a href="http://apsportseditors.org/newsletter/2015-apse-contest-investigative-all-categories/">Investigative Reporting - Top 10</a>), 2015, for Playing in the Red<br>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
