--- a/clips.html
+++ b/clips.html
@@ -122,6 +122,7 @@ layout: default
   Scripps Howard Award (<a href="http://www.prnewswire.com/news-releases/scripps-howard-awards-honor-nations-best-2014-journalism-300051814.html">Finalist, Public Service Reporting</a>), 2014, for Stop and Seize<br>
   Scripps Howard Award (<a href="http://www.scripps.com/foundation/news/958-2015-scripps-howard-award-winners-announced">Finalist, Investigative Reporting</a>), 2015, for Police Shootings<br>
   Associated Press Sports Editors Award (<a href="http://apsportseditors.org/newsletter/2015-apse-contest-investigative-all-categories/">Investigative Reporting - Top 10</a>), 2015, for Playing in the Red<br>
+  Virginia Press Association Award (Data Journalism), 2015 and 2014, for Police Shootings and Stop and Seize<br>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
