--- a/clips.html
+++ b/clips.html
@@ -110,6 +110,7 @@ layout: default
   Pulitzer Prize (<a href="http://www.pulitzer.org/works/2014-Public-Service-Group1">Public Service</a>), 2014, for NSA Revelations<br>
   Pulitzer Prize (<a href="http://www.pulitzer.org/winners/washington-post-staff">National Reporting</a>), 2016, for Police Shootings <br>
   Polk Award (<a href="http://www.liu.edu/Polk/Articles/2015-Winners">National Reporting</a>), 2015, for Police Shootings<br>
+  Sigma Delta Chi Award (Public Service Journalism), 2015, for Police Shootings<br>
   Gerald Loeb Award (<a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a>), 2014, for NSA Revelations<br>
   Robert F. Kennedy Journalism Award (<a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate<br>
