--- a/clips.html
+++ b/clips.html
@@ -107,6 +107,29 @@ layout: default
   <b>Awards:</b>
   <br>
   <br>
+  <table>
+    <tr>
+      <td>Award</td>
+      <td>Category</td>
+      <td>Winner/Finalist</td>
+      <td>Year</td>
+      <td>Project</td>
+    </tr>
+    <tr>
+      <td>Pulitzer Prize</td>
+      <td><a href="http://www.pulitzer.org/winners/washington-post-staff">National Reporting</a></td>
+      <td></td>
+      <td>2016</td>
+      <td>Fatal Force</td>
+    </tr>
+    <tr>
+      <td>Pulitzer Prize</td>
+      <td><a href="http://www.pulitzer.org/winners/washington-post-1">Public Service</a></td>
+      <td></td>
+      <td>2014</td>
+      <td>NSA Revelations</td>
+    </tr>
+  </table>
   Pulitzer Prize (<a href="http://www.pulitzer.org/winners/washington-post-1">Public Service</a>), 2014, for NSA Revelations<br>
   Pulitzer Prize (<a href="http://www.pulitzer.org/winners/washington-post-staff">National Reporting</a>), 2016, for Police Shootings <br>
   Polk Award (<a href="http://www.liu.edu/Polk/Articles/2015-Winners">National Reporting</a>), 2015, for Police Shootings<br>
