--- a/clips.html
+++ b/clips.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-
+<css>
+  table, th, td {
+   border: 1px solid black;
+}
+</css>
 <div class="home">
 
   <h1 class="page-heading">Clips</h1>
