--- a/clips.html
+++ b/clips.html
@@ -133,11 +133,23 @@ layout: default
       <td>2014</td>
       <td>NSA Revelations</td>
     </tr>
+    <tr>
+      <td>Polk Award</td>
+      <td><a href="http://www.liu.edu/Polk/Articles/2015-Winners">National Reporting</a></td>
+      <td></td>
+      <td>2015</td>
+      <td>Fatal Force</td>
+    </tr>
+    <tr>
+      <td>Sigma Delta Chi Award</td>
+      <td><a href="https://www.spj.org/sdxa15.asp">Public Service Journalism</a></td>
+      <td></td>
+      <td>2015</td>
+      <td>Fatal Force</td>
+    </tr>
   </table>
-  Pulitzer Prize (<a href="http://www.pulitzer.org/winners/washington-post-1">Public Service</a>), 2014, for NSA Revelations<br>
-  Pulitzer Prize (<a href="http://www.pulitzer.org/winners/washington-post-staff">National Reporting</a>), 2016, for Police Shootings <br>
-  Polk Award (<a href="http://www.liu.edu/Polk/Articles/2015-Winners">National Reporting</a>), 2015, for Police Shootings<br>
-  Sigma Delta Chi Award (<a href="https://www.spj.org/sdxa15.asp">Public Service Journalism</a>), 2015, for Police Shootings<br>
+  
+
   Gerald Loeb Award (<a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a>), 2014, for NSA Revelations<br>
   Robert F. Kennedy Journalism Award (<a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate<br>
