--- a/clips.html
+++ b/clips.html
@@ -163,6 +163,7 @@ layout: default
   Scripps Howard Award (<a href="http://www.scripps.com/foundation/news/958-2015-scripps-howard-award-winners-announced">Finalist, Investigative Reporting</a>), 2015, for Police Shootings<br>
   Associated Press Sports Editors Award (<a href="http://apsportseditors.org/newsletter/2015-apse-contest-investigative-all-categories/">Investigative Reporting - Top 10</a>), 2015, for Playing in the Red<br>
   Virginia Press Association Award (Data Journalism), 2015 and 2014, for Police Shootings and Stop and Seize<br>
+Add IRE finalists 2014 x2, 2016
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
