--- a/clips.html
+++ b/clips.html
@@ -165,6 +165,7 @@ layout: default
   Associated Press Sports Editors Award (<a href="http://apsportseditors.org/newsletter/2015-apse-contest-investigative-all-categories/">Investigative Reporting - Top 10</a>), 2015, for Playing in the Red<br>
   Virginia Press Association Award (Data Journalism), 2015 and 2014, for Police Shootings and Stop and Seize<br>
 Add IRE finalists 2014 x2, 2016
+Add ONA finalists 2014 and 2015
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
