--- a/clips.html
+++ b/clips.html
@@ -148,11 +148,29 @@ layout: default
       <td>2015</td>
       <td>Fatal Force</td>
     </tr>
+    <tr>
+      <td>Gerald Loeb Award</td>
+      <td><a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a></td>
+      <td></td>
+      <td>2014</td>
+      <td>NSA Revelations</td>
+    </tr>
+    <tr>
+      <td>Robert F. Kennedy Journalism Award</td>
+      <td><a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a></td>
+      <td></td>
+      <td>2014</td>
+      <td>Homes for the Taking</td>
+    </tr>
+    <tr>
+      <td>Edward R. Murrow Award</td>
+      <td><a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a></td>
+      <td></td>
+      <td>2015</td>
+      <td>Stop and Seize</td>
+    </tr>
   </table>
   
-
-  Gerald Loeb Award (<a href="http://www.anderson.ucla.edu/gerald-loeb-awards/2014-winners">Large Newspapers</a>), 2014, for NSA Revelations<br>
-  Robert F. Kennedy Journalism Award (<a href="http://rfkcenter.org/2014-robert-f-kennedy-journalism-award-recipients">Domestic Print</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate<br>
   American Society of News Editors Award (<a href="http://asne.org/blog_home.asp?Display=1666">Local Accountability Reporting</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Data Journalism Award (<a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
@@ -164,6 +182,7 @@ layout: default
   Scripps Howard Award (<a href="http://www.scripps.com/foundation/news/958-2015-scripps-howard-award-winners-announced">Finalist, Investigative Reporting</a>), 2015, for Police Shootings<br>
   Associated Press Sports Editors Award (<a href="http://apsportseditors.org/newsletter/2015-apse-contest-investigative-all-categories/">Investigative Reporting - Top 10</a>), 2015, for Playing in the Red<br>
   Virginia Press Association Award (Data Journalism), 2015 and 2014, for Police Shootings and Stop and Seize<br>
+  
 Add IRE finalists 2014 x2, 2016
 Add ONA finalists 2014 and 2015
 
