--- a/clips.html
+++ b/clips.html
@@ -169,11 +169,25 @@ layout: default
       <td>2015</td>
       <td>Stop and Seize</td>
     </tr>
+    <tr>
+      <td>American Society of News Editors Award</td>
+      <td><a href="http://asne.org/blog_home.asp?Display=1666">Local Accountability Reporting</a></td>
+      <td></td>
+      <td>2014</td>
+      <td>Homes for the Taking</td>
+    </tr>
+    <tr>
+      <td>Data Journalism Award</td>
+      <td><a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a></td>
+      <td></td>
+      <td>2014</td>
+      <td>Homes for the Taking</td>
+    </tr>
   </table>
   
-  Edward R. Murrow Award (<a href="http://www.rtdna.org/content/2015_national_edward_r_murrow_award_winners">Investigative Reporting, Large Online Organizations</a>), 2015, for Stop and Seize: Cops and the Cash they Confiscate<br>
-  American Society of News Editors Award (<a href="http://asne.org/blog_home.asp?Display=1666">Local Accountability Reporting</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
-  Data Journalism Award (<a href="http://www.globaleditorsnetwork.org/programmes/data-journalism-awards/">Best Data-driven Investigation</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
+
+  
+
   Heywood Broun Award (<a href="http://www.cwa-union.org/news/entry/black_lung_series_wins_the_guilds_broun_award/">Substantial Distinction</a>), 2014, for Homes for the Taking: Liens, Loss and Profiteers<br>
   Online News Association Award (<a href="http://journalists.org/awards/2014-awards/">Student Projects, Large</a>), 2014, for News21: Coming Home<br>
   Selden Ring Award for Investigative Reporting (Finalist), <a href="http://annenberg.usc.edu/news/around-usc-annenberg/milwaukee-journal-sentinel-team-wins-2014-usc-annenberg-selden-ring-award">2014</a> and <a href="http://annenberg.usc.edu/news/awards/%E2%80%9Cseafood-slaves%E2%80%9D-associated-press-wins-usc-annenberg%E2%80%99s-2016-selden-ring-award">2016</a>, for NSA Revelations and Police Shootings<br>
