--- a/clips.html
+++ b/clips.html
@@ -183,6 +183,13 @@ layout: default
       <td>2014</td>
       <td>Homes for the Taking</td>
     </tr>
+    <tr>
+      <td>Associated Press Sports Editors Award</td>
+      <td><a href="http://apsportseditors.org/newsletter/the-washington-posts-hobson-rich-earn-first-in-investigative-category/">Investigative Reporting</a></td>
+      <td>First Place</td>
+      <td>2015</td>
+      <td>Playing in the Red</td>
+    </tr>
   </table>
   
 
